--- a/art.html
+++ b/art.html
@@ -19,7 +19,8 @@
       <li><a href="games.html"> games</a></li>
       
     </ul>
-  
+ 
+<img src="image1.pdf" alt="artifact" width=100>  
   
 </body>
   
