--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       
     </ul>
   
-<img src="image1.pdf" alt="artifact" width=100>    
+<img src="image1.pdf" alt="artifact" width="200">    
   
 </body>
   
