--- a/about.html
+++ b/about.html
@@ -19,7 +19,8 @@
       <li><a href="games.html"> games</a></li>
       
     </ul>
-    
+
+<img src="artifact1.png" width="500">    
   
 </body>
   
